Agregamos el archivo de cuartiles

--- a/Centrality Measures/1.4 Arithmetic Mean.ipynb
+++ b/Centrality Measures/1.4 Arithmetic Mean.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0eb8fc74-a7aa-490d-a6ae-00e20329fba8",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "2dc3c82d-3162-4e6b-b1b3-6a861138ac07",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>N of subjects passed</th>\n",
-       "      <th>frequecy</th>\n",
+       "      <th>frequency</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -177,17 +177,17 @@
        "</div>"
       ],
       "text/plain": [
-       "  N of subjects passed  frequecy\n",
-       "0                    0        30\n",
-       "1                    1       150\n",
-       "2                    2       200\n",
-       "3                    3       300\n",
-       "4                    4       250\n",
-       "5                    5       200\n",
-       "6                    6        20"
+       "  N of subjects passed  frequency\n",
+       "0                    0         30\n",
+       "1                    1        150\n",
+       "2                    2        200\n",
+       "3                    3        300\n",
+       "4                    4        250\n",
+       "5                    5        200\n",
+       "6                    6         20"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
    "source": [
     "# initialize data of lists.\n",
     "data = {'N of subjects passed': ['0', '1', '2', '3','4','5','6'],\n",
-    "        'frequecy': [30, 150, 200, 300, 250, 200, 20]}\n",
+    "        'frequency': [30, 150, 200, 300, 250, 200, 20]}\n",
     " \n",
     "# Create DataFrame\n",
     "df = pd.DataFrame(data)\n",
