Arreglamos algunos puntos del archivo

--- a/Non-central Measures/2.1 - Quartiles.ipynb
+++ b/Non-central Measures/2.1 - Quartiles.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "Quartiles are a statistical measure that divides a set of ordered data into **four** equal parts.\n",
     "\n",
-    "The quartiles, usually denoted as **Q1**, **Q2** and **Q3**, represent the values ​​that separate the bottom 25%, the middle 50% and the top 25% of the data, respectively.\n",
+    "The quartiles, usually denoted as **Q1**, **Q2** and **Q3**, represent the values that separate the bottom 25%, the middle 50% and the top 25% of the data, respectively.\n",
     "\n",
     "The second quartile, Q2, is simply the **median** of the data set. To better understand quartiles, it is essential to have a prior understanding of the median. The median is the center value of a set of ordered data, that is, it divides the data set into two equal parts: half of the data is above the median and the other half is below it.\n",
     "\n",
@@ -46,7 +46,7 @@
    "id": "3ce558ba-6aea-4cff-b6f9-7a54c20a2f43",
    "metadata": {},
    "source": [
-    "**1. First quartile (Q1):** It is the value that separates the lowest 25% of the data from the highest 75%. Mathematically, if we have a set of ordered data X1, X2, ..., Xn, where Xn is the number of data, then the first quartile is calculated as the value of or equal to X.\n",
+    "**1. First quartile (Q1):** It is the value that separates the lowest 25% of the data from the highest 75%.\n",
     "\n",
     "If the total number of data is odd, Q1 is the value at position (n+1)/4.\n",
     "\n",
@@ -87,7 +87,7 @@
    "id": "86a53a27-ba93-47f4-a205-c902b52704f7",
    "metadata": {},
    "source": [
-    "La variables deben ser de nivel ordinal o superior, para poder calcular los cuartiles de un conjunto de datos."
+    "The variables must be of ordinal level or higher, to be able to calculate the quartiles of a data set."
    ]
   },
   {
