Cambio en el titulo de median

--- a/Centrality Measures/1.3 Median.ipynb
+++ b/Centrality Measures/1.3 Median.ipynb
@@ -5,7 +5,8 @@
    "id": "82d4a38f-ee73-4d80-9a7c-9ba9455cf10f",
    "metadata": {},
    "source": [
-    "1.3 - Mode\n",
+    "1.3 - Median\n",
+    "----\n",
     "----"
    ]
   },
