Agregamos archivo sobre desviación estandart

--- a/Measures of dispersion/3.2 - Sample variance.ipynb
+++ b/Measures of dispersion/3.2 - Sample variance.ipynb
@@ -29,7 +29,7 @@
     "s^2 = \\frac{\\sum_{i=1}^{n} (x_i - \\bar{x})^2}{n-1}\n",
     "$\n",
     "\n",
-    "Donde:\n",
+    "We say that:\n",
     "\n",
     "- $(s^2)$ is the sample variance.\n",
     "- $(n)$ is the sample size.\n",
@@ -112,19 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "id": "da296602",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "id": "adafa7d5",
    "metadata": {},
    "outputs": [
@@ -252,7 +250,7 @@
        "10   11   37.6              4.336364                 18.804050"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "id": "dd382dbb",
    "metadata": {},
    "outputs": [
@@ -300,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "id": "dd21c2df",
    "metadata": {},
    "outputs": [
@@ -329,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "id": "155f9fcd",
    "metadata": {},
    "outputs": [
